     mix a given color with the frame)
   * units can now have a recruit animations that will be played on unit recruit
   * units now have idle animations, played when they've been idle for some time
   * units now have leveling up animations
   * units can now have victory animations,  usable with the WML tag 'victory_anim' 
   * [event]s can now be written also inside [era]s (the [event]s are included
     in every scenario played using that era)
   * new operations for set_variable : divide and modulo
   * Animations now use duration= tag instead of begin= and end= (backward
   * Animations now have a frequency= filter to allow to tweak realtive rarety
   compatible)
   * [message]s now use the duration= tag instead of [delay]ing afterwards
 * multiplayer game management
   * client now tells the server if a game ended in victory or defeat
   * configurable castle size for random map generator (patch #598, FR #3232)
 * multiplayer scenarios
   * scenarios can set faction, recruit, leader, and some other initial settings
     previously ignored in multiplayer
 * language and i18n:
   * new manpages: Czech, Dutch, English (GB), French, Italian,
     Portuguese (Brazil), Japanese, Slovak.
   * updated manpages: German, Swedish.
   * removed manpages (outdated): Hungarian.
 * other:
   * --validcache runtime switch to force assumption that cache is valid
 * Python AI
   * Added various input validations
   * Set Python errors upon error

Version 1.1.7:
 * campaigns
   * Heir to the Throne
     * added 2 mermen to Bay of Pearls on hard
     * lowered turn limits on Scepter of Fire to something sane
 * language and i18n:
    * updated translations: French, German, Portuguese (Brazil), Spanish,
      Swedish
 * multiplayer maps:
    * revised multiplayer maps: Amohsad Caldera
 * units
    * balancing changes:
      * removed White Mage and Mage of Light from random_leader
      * removed special defense values from the Merman Hoplite