@@ -256,6 +256,8 @@ class unit
 		const idle_animation& idling_animation(const display& disp, const gamemap::location& loc) const;
 		const levelin_animation& levelingin_animation(const display& disp, const gamemap::location& loc) const;
 		const levelout_animation& levelingout_animation(const display& disp, const gamemap::location& loc) const;
+		const healed_animation& get_healed_animation(const display& disp, const gamemap::location& loc,int healing) const;
+		const poison_animation& poisoned_animation(const display& disp, const gamemap::location& loc,int damage) const;
 
 		bool get_ability_bool(const std::string& ability, const gamemap::location& loc) const;
 		unit_ability_list get_abilities(const std::string& ability, const gamemap::location& loc) const;
@@ -365,6 +367,8 @@ class unit
 		std::vector<idle_animation> idle_animations_;
 		std::vector<levelin_animation> levelin_animations_;
 		std::vector<levelout_animation> levelout_animations_;
+		std::vector<healed_animation> healed_animations_;
+		std::vector<poison_animation> poison_animations_;
 		unit_animation *anim_;
 		Uint32 next_idling;
 		int frame_begin_time;
